syntax = "proto3";

option csharp_namespace = "Math.Expression.Solver.Api";

package expression;

service Expression {

  rpc Solve (SolveRequest) returns (SolveReply);

  rpc GetSteps (GetStepsRequest) returns (GetStepsReply);
}

message SolveRequest {
  string expression = 1;
}

message GetStepsRequest {
  string expression = 1;
}

message SolveReply {
  double result = 1;
  bool succeeded = 2;
  string message = 3;
}

message GetStepsReply {
  string steps = 1;
  bool succeeded = 2;
  string message = 3;
  double result = 4;
}